apps/shop/shipping/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-shipping-dev
spec:
  host: shop-shipping.shop-shipping.svc.cluster.local
  subsets:
  - name: shop-shipping-dev
    labels:
      app: shop-shipping
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-shipping-dev-d1a
    labels:
      app: shop-shipping
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
