apps/shop/shipping/k8s/overlays/non-prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-shipping-dev
spec:
  hosts:
  - shop-shipping
  http:
  - match:
    - sourceLabels:
        app: shop-shipping
        env: dev
    route:
    - destination:
        host: shop-shipping
        subset: shop-shipping-dev
